added a link to the chocolate-covered-strawberries page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     </p>
 
+    <p>
+       <a href="recipes/chocolate-covered-strawberries.html">Chocolate Covered Strawberries</a>
+
+    </p>
+
 </body>
 
 </html>
