Complted the recipes webpage
I added a photo/ingredients/directions

--- a/recipes/pecanpie.html
+++ b/recipes/pecanpie.html
@@ -1,14 +1,41 @@
-<!DOCTYPE html>>
-<html lang="en">
+<!DOCTYPE html>
 
-<head>
-    <meta charset="utf-8">
-    <title>Pecan Pie</title>
-</head>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Pecan Pie</title>
+    </head>
 
-<body>
+    <body>
+        <h1>Pecan Pie</h1>
+          <img src="../images/pecanpiejpg.jpg" alt="A perfectly designed pecan pie, mouthwatering">
+
+          <h3>Description</h3>
+            <p>
+                Do you love sweet gooey centers? Do you enjoy pecans? Our final recipe for today is grandma's homemade pecan pie. Come along on this journey to craft the best nut pie you've ever had. 
+            </p>
+
+            <h2>Ingredients</h2>
+              <ul>
+                  <li>1/4 cup butter (melted)</li>
+                  <li>1/2 cup sugar</li>
+                  <li>1 cup dark corn syrup</li>
+                  <li>3 eggs (beaten)</li>
+                  <li>1 cup whole pecans or to preference</li>
+                  <li>1 teaspoon vanilla</li>
+              </ul>
+
+              <h2>Directions</h2>
+                <ol>
+                    <li>We are going to mix all ingredients.</li>
+                    <li>Melt the butter first, add in the rest of the ingredients one by one, pecans last.</li>
+                    <li>Pour into unbaked pie crust (9" pie pan)</li>
+                    <li>Bake at 350 degrees for 50-55 minutes (watch).</li>
+                    <li>Use a knife in the middle of the pie to test if it is done after 45-50 minutes. The knife should come out clean.</li>
+                    <li><strong>Enjoy!</strong></li>
+                </ol>
 
 
-</body>
-
+              <a href="../index.html">Home</a>
+    </body>
 </html>
