bolded the enjoy! text

--- a/recipes/chocolate-covered-strawberries.html
+++ b/recipes/chocolate-covered-strawberries.html
@@ -32,7 +32,7 @@
       <li>Take your chilled strawberries, hold them by the leaf at an 45 degree angle and dip them 2/3 of the way into the chocolate mixture*</li>
       <li>Shake the strawberry gently to remove access chocolate</li>
       <li>Place the dipped strawberries on a wax covered plate, allow them to cool or refridgerate</li>
-      <li>Enjoy!</li>
+      <li><strong>Enjoy!</strong></li>
     </ol>
 
     <p>*Mixture makes about 8-10 strawberries</p>
