Fixed the homepage title to grandma's recipes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head> 
   <meta charset="utf-8">
-  <title>Odin Recipes</title>
+  <title>Grandma's Recipes</title>
 </head>
 
 <body>
-  <h1>Odin Recipes</h1>
+  <h1>Graandma's Recipes</h1>
     <p>
        <h2>Desserts</h2>
          <a href="recipes/fivepound-fudge.html">Five Pound Fudge</a> 
