Fixed spelling of grandma

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Graandma's Recipes</h1>
+  <h1>Grandma's Recipes</h1>
     <p>
        <h2>Desserts</h2>
          <a href="recipes/fivepound-fudge.html">Five Pound Fudge</a> 
