added periods to directions

--- a/recipes/chocolate-covered-strawberries.html
+++ b/recipes/chocolate-covered-strawberries.html
@@ -27,11 +27,11 @@
   <h2>Directions</h2>
     <ol>
       <li>Rinse the strawberries, dry and chill</li>     
-      <li>Melt the chocolate with the shortening in a large microwaveable container</li> 
-      <li>Stir until smooth</li>
-      <li>Take your chilled strawberries, hold them by the leaf at an 45 degree angle and dip them 2/3 of the way into the chocolate mixture*</li>
-      <li>Shake the strawberry gently to remove access chocolate</li>
-      <li>Place the dipped strawberries on a wax covered plate, allow them to cool or refridgerate</li>
+      <li>Melt the chocolate with the shortening in a large microwaveable container.</li> 
+      <li>Stir until smooth.</li>
+      <li>Take your chilled strawberries, hold them by the leaf at an 45 degree angle and dip them 2/3 of the way into the chocolate mixture*.</li>
+      <li>Shake the strawberry gently to remove access chocolate.</li>
+      <li>Place the dipped strawberries on a wax covered plate, allow them to cool or refridgerate.</li>
       <li><strong>Enjoy!</strong></li>
     </ol>
 
