fixed spelling errors:

--- a/recipes/fivepound-fudge.html
+++ b/recipes/fivepound-fudge.html
@@ -35,7 +35,7 @@
           <ol>
             <li>Open up your two pints of marshmallow cream. If you would like to measure it out into a bowl beforehand, that would make it easieer for you to add it in to the pot.</li>
             <li>Put sugar, milk and Oleo in heavy large pan</li>
-            <li>Bring to a boil, cook 8 minutes. Make sure to stirr continuously.     rRemove from heat if needed.
+            <li>Bring to a boil, cook 8 minutes. Make sure to stir continuously.     remove from heat if needed.
             </li>
             <li>Are you ready to build those muscles? Add the marshmallow cream and chips. Stir both in until all are melted together.</li>
             <li>Add nuts now if you wish.</li>
