fixed minor spelling/bold letterins

--- a/recipes/pecanpie.html
+++ b/recipes/pecanpie.html
@@ -27,7 +27,7 @@
 
               <h2>Directions</h2>
                 <ol>
-                    <li>We are going to mix all ingredients.</li>
+                    <li>We are going to mix all of the ingredients.</li>
                     <li>Melt the butter first, add in the rest of the ingredients one by one, pecans last.</li>
                     <li>Pour into unbaked pie crust (9" pie pan)</li>
                     <li>Bake at 350 degrees for 50-55 minutes (watch).</li>
