--- a/recipes/fivepound-fudge.html
+++ b/recipes/fivepound-fudge.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Five Pound Fudge</h1>
-    <img src="../Images/fudge.jpeg" alt="Creamy delicious fudge">
+    <img src="../Images/fudge.jpg" alt="Creamy delicious fudge">
 
     <h3>Description</h3>
       <p>
