--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
   <h1>Grandma's Recipes</h1>
+
+    <img src="https://i.imgur.com/PZZ0BtG.gif">
     <p>
        <h2>Desserts</h2>
          <a href="recipes/fivepound-fudge.html">Five Pound Fudge</a> 
