added a css stylesheet

--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
 <head> 
   <meta charset="utf-8">
   <title>Grandma's Recipes</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <h1>Grandma's Recipes</h1>
 
+  <p>
     <img src="https://i.imgur.com/PZZ0BtG.gif">
+  </p>
     <p>
        <h2>Desserts</h2>
-         <a href="recipes/fivepound-fudge.html">Five Pound Fudge</a> 
+    </p>
+
+    <p>
+        <button class="button1"> <a href="recipes/fivepound-fudge.html">Five Pound Fudge</a> </button>
 
     </p>
 
     <p>
-       <a href="recipes/chocolate-covered-strawberries.html">Chocolate Covered Strawberries</a>
+       <button class="button2"> <a href="recipes/chocolate-covered-strawberries.html">Chocolate Covered Strawberries </a></button>
 
     </p>
 
     <p>
-       <a href="recipes/pecanpie.html">Pecan Pie</a>
+       <button class="button3"> <a href="recipes/pecanpie.html">Pecan Pie</a> </button>
 
     </p>
 
